k8s-kustomize/overlays/production/blue/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  template:
    spec:
      containers:
        - name: currency-converter
