k8s-kustomize/overlays/production/blue/service-selector-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-service
spec:
  selector:
    app: currency-converter
    version: blue # <--  Directs all traffic to 'blue' pods
