k8s-kustomize/overlays/production/blue/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-main-ingress
spec:
  rules:
  - host: app.trialphase.shop
